2010-01-28  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc-André

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	Define remove_client called by the HTTPAuthenticator but not used
	in the apple streamer, where expiration is checked on each request
	using using cookies.
	* flumotion/component/consumers/applestreamer/hlsring.py:
	Fragments must be available to clients for some time after they
	have been removed from the playlist

2010-01-22  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	Round fragments's duration to prevent innacuracies in the encoder's
	keyframe distance

2010-01-21  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/muxers/mpegts/mpegts.xml:
	Add missing __init__.py to the bundle

2010-01-20  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion-fragmented-streaming.spec.in:
	Remove 'python-uuid' and 'gst-plugins-bad' dependencies.
	They are handled by fsp-role-streamer.
	Fix the release date

2010-01-19  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	Revert partially 26726: Don't drop preroll buffer
	The preroll buffer is the same as the first buffer. We don't
	need it

2010-01-19  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/hlsring.py:
	Fix the way the target duration is set.
	* flumotion/test/test_resource.py:
	Added test for authentication renewal.

2010-01-18  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.py:
	* flumotion/component/consumers/applestreamer/hlsring.py:
	* flumotion/component/consumers/applestreamer/resources.py:
	* flumotion/component/muxers/mpegts/mpegts.py:
	* flumotion/test/test_hls_ring.py:
	* flumotion/test/test_mpegts.py:
	* flumotion/test/test_ts_segmenter.py: