@@ -1,3 +1,9 @@
+2010-01-29  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	* flumotion/component/consumers/applestreamer/resources.py:
+	* flumotion/test/test_resource.py:
+	Don't decode the cookie twice and do it in try/except block
+
 2010-01-28  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 	reviewed by: Marc-André
